<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background_new" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bvdh_logo" />

    <TextView
        android:id="@+id/mainQuestion"
        style="@style/textCapsCentre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_crop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="#99000000"
        android:padding="10dp"
        android:text="@string/StartQuestion" />

    <Button
        android:id="@+id/btn_crop"
        style="@style/BvDH_button"
        android:layout_width="100dp"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal|bottom|left"
        android:layout_toLeftOf="@+id/space"
        android:background="@color/green"
        android:drawableTop="@drawable/camera_icon"
        android:paddingBottom="20dp"
        android:paddingTop="40dp"
        android:text="@string/btnAddPhoto"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_Skip"
        style="@style/BvDH_button"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_toRightOf="@+id/space"
        android:background="@color/red"
        android:drawableTop="@drawable/text_icon"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="20dp"
        android:paddingTop="40dp"
        android:text="@string/btnAddTxt"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>