<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backrepeat"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/confirmOptionsLL"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmOptionsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/email"
                android:drawableLeft="@drawable/envelope"
                android:drawablePadding="25dp"
                android:ems="10"
                android:hint="@string/ConfirmEmailHint"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:selectAllOnFocus="true"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editText_email"
                android:layout_alignEnd="@+id/editText_email"
                android:layout_alignRight="@+id/editText_email"
                android:layout_alignTop="@+id/editText_email"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:src="@drawable/question_mark" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:button="@drawable/btn_check_holo_dark"
            android:checked="false"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:radius="5dp"
            android:text="@string/ConfirmCheckbox"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnfinalsubmit"
            style="@style/buttonArrowGreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:text="@string/ConfirmBtn"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>