<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat"
    android:clickable="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/previewTxtOptionsLL" >

        <ImageView
            android:id="@+id/animView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aspectFix"
            android:layout_alignLeft="@+id/aspectFix"
            android:layout_alignRight="@+id/aspectFix"
            android:layout_alignTop="@+id/aspectFix"
            android:background="#000000"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/aspectFix"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:background="@drawable/back"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/ImageViewPreview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aspectFix"
            android:layout_alignLeft="@+id/aspectFix"
            android:layout_alignRight="@+id/aspectFix"
            android:layout_alignTop="@+id/aspectFix"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:maxHeight="450dp"
            android:maxWidth="600dp"
            android:minHeight="225dp"
            android:minWidth="300dp"
            android:scaleType="fitXY"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/TextViewPreview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aspectFix"
            android:layout_alignLeft="@+id/aspectFix"
            android:layout_alignRight="@+id/aspectFix"
            android:layout_alignTop="@+id/aspectFix"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:gravity="center_vertical|left"
            android:lineSpacingExtra="-4dp"
            android:maxLines="4"
            android:singleLine="false"
            android:textColor="#f5f5f5"
            android:textStyle="bold"
            android:visibility="invisible" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignBottom="@+id/aspectFix"
            android:layout_alignLeft="@+id/aspectFix"
            android:layout_alignRight="@+id/aspectFix"
            android:layout_alignTop="@+id/aspectFix" >

            <ImageButton
                android:id="@+id/btnRestartAnim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/restart"
                android:visibility="invisible" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/previewTxtOptionsLL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnChangePreviewPhoto"
            style="@style/buttonArrowGrey"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/camera"
            android:text="@string/PreviewbtnChangePhoto"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnchangePreviewText"
            style="@style/buttonArrowGrey"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/text"
            android:text="@string/PreviewbtnChangeTxt"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnSubmitmsgtxt"
            style="@style/buttonArrowGreen"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/happy"
            android:text="@string/Continue"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>